--- a/client/main.css
+++ b/client/main.css
@@ -1,6 +1,40 @@
 
 .map-container {
-  	width: 		800px;
+  	width: 			1000px;
   	max-width: 	100%;
-  	height: 	600px;
+  	height: 		600px;
 }
+
+.masthead.segment {
+    min-height: 100px;
+    padding: 2em 0em;
+}
+
+.masthead h1.ui.header {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    font-size: 2em;
+    font-weight: normal;
+}
+.footer.segment {
+	min-height: 280px;
+	padding-top: 4em;
+}
+.search-move {
+	padding-left: 1em;
+	padding-top:  0.5em;
+	padding-bottom: 0.5em;
+}
+.ui.vertical.stripe.quote.segment {
+	padding-left: 1em;
+}
+.top-p {
+	padding-top: 1em;
+}
+
+.pusher {
+  width: 100%;
+}
+
+
+
